Fixed spacing between section thumbnails on mobile version of Country Kitchen page

--- a/htdocs/prod/web/assets/css/mobile.css
+++ b/htdocs/prod/web/assets/css/mobile.css
@@ -111,6 +111,10 @@
     }
 
     /*Country Kitchen*/
+    .ck-details {
+      margin-bottom: 0 !important;
+    }
+
     .originals-feature {
       margin-bottom: 0 !important;
       /*padding-left: 0;*/
